cluster/apps/tools/nginx/nginx-blue-deployment.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-deploy-blue
  namespace: tools
spec:
  ports:
  - name: http
    port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx
  name: nginx-deploy-blue
  namespace: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx-blue
  template:
    metadata:
      labels:
        run: nginx-blue
    spec:
      volumes:
      - name: webdata
        emptyDir: {}
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: webdata
          mountPath: "/usr/share/nginx/html"
